tests/test_scope/bad/output/sub_vars_in_sub_var.catala_en.A.Interpret
[ERROR] The subscope a is used when defining one of its inputs, but recursion is forbidden in Catala

  --> tests/test_scope/bad/sub_vars_in_sub_var.catala_en
   | 
13 |   definition a.y equals if a.x then 0 else 1
   |                            ^^^
   + Article
